tex part updated before texmaker migration

--- a/doc/tex/templates/coursework/05-design.tex
+++ b/doc/tex/templates/coursework/05-design.tex
@@ -1,6 +1,6 @@
 \chapter{Конструкторский раздел}
 
-В данном разделе приведено описание сущностей и диаграмма проектируемой базы данных, описание проектируемых ограничений целостности базы данных, описание проектируемых процедур, функций и триггеров и описание проектируемой ролевой модели.
+В данном разделе приведено описание сущностей и диаграмма проектируемой базы данных, описание проектируемых ограничений целостности базы данных, описание проектируемых триггеров и описание проектируемой ролевой модели.
 
 \section{Описание сущностей базы данных}
 
@@ -157,4 +157,60 @@
 \end{figure}
 
 \section{Описание проектируемых триггеров}
+
+В проектируемой базе данных необходимо реализовать триггеры обновляющие значения некоторых полей после добавления новых записей в таблицы. 
+
+На рисунке \ref{img:trigger2} приведен алгоритм триггера, обновляющего статус заявки на обслуживание после добавления записи в таблицу отчетов об обслуживании. Таким образом после публикации отчета об обслуживании статус проработанной заявки автоматически изменится на <<завершена>>.
+
+На рисунке \ref{img:trigger3} приведен алгоритм триггера, обновляющего даты последнего и следующего техобслуживания, время простоя и статус производственной линии. При публикации отчета об обслуживании, будет вычислено количество часов прошедших с момента остановки работы производственной линии и это значение будет добавлено к полю DownTime, статус линии при этом будет изменен на <<работает>>. Если заявка на обслуживание, на основе которой был составлен отчет, имела тип <<техосмотр>>, то публикация отчета будет означать, что техосмотр был проведен, а значит необходимо занести информацию об этом в таблицу производственной линии. Так, после завершения техосмотра, его дата будет записана в поле LastInspectionDate и на основе данных о требуемой частоте техосмотров линии будет рассчитана дата следующего техосмотра.
+
+На рисунке \ref{img:trigger4} приведен алгоритм триггера, обновляющего статус производственной линии при создании заявки на ее обслуживание. После публикации заявки на обслуживание статус производственной линии автоматически изменится на <<на обслуживании>>.
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.85\textwidth]{templates/coursework/inc/img/trigger2.png}
+    \caption{Алгоритм триггера, обновляющего статус заявки на обслуживание}
+    \label{img:trigger2}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{templates/coursework/inc/img/trigger3.png}
+    \caption{Алгоритм триггера, обновляющего даты последнего и следующего техобслуживания, времени простоя и статуса производственной линии}
+    \label{img:trigger3}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.85\textwidth]{templates/coursework/inc/img/trigger4.png}
+    \caption{Алгоритм триггера, обновляющего статус производственной линии}
+    \label{img:trigger4}
+\end{figure}
+
+\section{Описание проектируемой ролевой модели}
+
+Для эффективного и безопасного взаимодействия пользователей с базой данных была разработана ролевая модель, определяющая функционал доступный каждому типу пользователей.
+
+В таблице \ref{tab:rolemodel} описан уровень доступа для каждого типа пользователя. Символом <<(*)>> обозначим все таблицы базы данных. Таким образом у администратора есть полный доступ ко всем таблицам. Символом <<\textbf{---}>> обозначим отсутствие таблиц для данного типа доступа.
+
+
+
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|c|} \hline  
+         &  \textbf{SELECT}& \textbf{UPDATE} & \textbf{INSERT} \\ \hline  
+         \textbf{\makecell{Оператор\\ производства}}&  \makecell{Tractors,\\ AssemblyLines,\\ ServiceReports,\\ ServiceRequests}& \makecell{AssemblyLines,\\ ServiceReqests, \\ Users} & \makecell{ServiceRequests}\\ \hline  
+         \textbf{\makecell{Специалист\\ по обслуживанию}}& \makecell{Tractors,\\ AssemblyLines,\\ ServiceRequests,\\ ServiceReports,\\ Details,\\ DetailOrders} & \makecell{DetailOrders,\\ ServiceReports,\\ Users} & \makecell{ServiceReports, \\DetailOrders} \\ \hline  
+         \textbf{Администратор}& (*) & (*) & (*)\\ \hline  
+        \textbf{\makecell{Неавторизованный\\ пользователь}} & \textbf{---} & \textbf{---} & Users \\ \hline 
+    \end{tabular}
+    \caption{Описание проектируемой ролевой модели}
+    \label{tab:rolemodel}
+\end{table}
+
+\subsection*{Вывод}
+
+В данном разделе была проведена формализация сущностей и построена диаграмма проектируемой базы данных, спроектирована ролевая модель и триггеры.
 
