--- a/doc/tex/templates/coursework/biblio.bib
+++ b/doc/tex/templates/coursework/biblio.bib
@@ -34,3 +34,29 @@
   year={2016},
   publisher={Издательство Уральского университета}
 }
+
+@misc{DB-Engines,
+	title="DB-Engines Ranking [Электронный ресурс].",
+	howpublished="--- Режим доступа:  \url{https://db-engines.com/en/ranking} (дата обращения: 09.05.2024)."
+}
+
+@misc{Oracle,
+	title="
+Oracle Россия и СНГ [Электронный ресурс].",
+	howpublished="--- Режим доступа:  \url{https://www.oracle.com/cis/database/} (дата обращения: 09.05.2024)."
+}
+
+@misc{MySQL,
+	title="MySQL [Электронный ресурс].",
+	howpublished="--- Режим доступа:  \url{https://www.mysql.com/} (дата обращения: 09.05.2024)."
+}
+
+@misc{MicrosoftSQLServer,
+	title="Microsoft SQL server [Электронный ресурс].",
+	howpublished="--- Режим доступа:  \url{https://www.microsoft.com/ru-ru/sql-server/sql-server-2019} (дата обращения: 09.05.2024)."
+}
+
+@misc{PostgreSQL,
+	title="PostgreSQL [Электронный ресурс].",
+	howpublished="--- Режим доступа:  \url{https://www.postgresql.org/} (дата обращения: 09.05.2024)."
+}
