migration to texmaker

--- a/doc/tex/templates/coursework/04-analysis.tex
+++ b/doc/tex/templates/coursework/04-analysis.tex
@@ -116,7 +116,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{templates/coursework/inc/img/erchena.png}
+    \includegraphics[width=1\textwidth]{inc/img/erchena}
     \caption{ER-диаграмма сущностей в нотации Чена}
     \label{img:er}
 \end{figure}
@@ -136,7 +136,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{templates/coursework/inc/img/use-case.png}
+    \includegraphics[width=1\textwidth]{inc/img/use-case.png}
     \caption{Диаграмма вариантов использования}
     \label{img:use-case}
 \end{figure}
