--- a/doc/tex/templates/coursework/05-design.tex
+++ b/doc/tex/templates/coursework/05-design.tex
@@ -151,7 +151,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{templates/coursework/inc/img/er.png}
+    \includegraphics[width=1\textwidth]{inc/img/er.png}
     \caption{ER-диаграмма проектируемой базы данных}
     \label{img:erdb}
 \end{figure}
@@ -169,21 +169,21 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{templates/coursework/inc/img/trigger2.png}
+    \includegraphics[width=0.85\textwidth]{inc/img/trigger2.png}
     \caption{Алгоритм триггера, обновляющего статус заявки на обслуживание}
     \label{img:trigger2}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{templates/coursework/inc/img/trigger3.png}
+    \includegraphics[width=1\textwidth]{inc/img/trigger3.png}
     \caption{Алгоритм триггера, обновляющего даты последнего и следующего техобслуживания, времени простоя и статуса производственной линии}
     \label{img:trigger3}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{templates/coursework/inc/img/trigger4.png}
+    \includegraphics[width=0.85\textwidth]{inc/img/trigger4.png}
     \caption{Алгоритм триггера, обновляющего статус производственной линии}
     \label{img:trigger4}
 \end{figure}
